--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Welcome to my app</title>
+<link rel="stylesheet" href="/css/master.css">
 </head>
 <body>
 	<h1>Welcome to my app!</h1>
